# jstore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
dbus/: JStore.xml
examples/: CMakeLists.txt  wifi_manager.cpp
include/: jstore.hpp
include/jstore/: dbus.hpp  for_each.hpp  path_to.hpp  serialization.hpp  stdio_fstream.hpp  traits.hpp  utilities.hpp  visit_path.hpp
tests/: CMakeLists.txt  ut_jstore.cpp  ut_jstore_dbus.cpp  ut_stdio_fstream.cpp
